WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311956
Slack message box UI does not properly fit the screen, causing it to be cut off
https://bugs.webkit.org/show_bug.cgi?id=311956
Summary
Slack message box UI does not properly fit the screen, causing it to be cut off
Jessica Cheung
Reported
2026-04-10 12:06:16 PDT
rdar://171190689
Attachments
Add attachment
proposed patch, testcase, etc.
Jessica Cheung
Comment 1
2026-04-10 12:54:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62478
EWS
Comment 2
2026-04-13 20:55:35 PDT
Committed
311160@main
(5526ed500832): <
https://commits.webkit.org/311160@main
> Reviewed commits have been landed. Closing PR #62478 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug