Slack message box UI does not properly fit the screen, causing it to be cut off https://bugs.webkit.org/show_bug.cgi?id=311956 rdar://171190689

Reviewed by Aditya Keerthi and Tim Horton.

Slack uses vh to compute the height. On iOS Safari,
lvh (large viewport height) = vh. Thus, when the tab
bar is collapsed, the page fits perfectly and no UI
is obscured.

However, when the tab bar is expanded, vh is still reported
as lvh, which makes the page height greater than the
current viewport height and the UI is obscured.

Quirk this issue such that for Slack, WebKit reports dvh (dynamic
viewport height). dvh will adjust the height based on whether the
tab bar and other elements are expanded or not.

* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::sizeForCSSDefaultViewportUnits const):
* Source/WebCore/page/LocalFrameView.h:
* Source/WebCore/page/Quirks.cpp:
* Source/WebCore/page/Quirks.h:
* Source/WebCore/page/QuirksData.h:
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::setUseDynamicViewportUnitsAsDefaultIfNeeded):
(WebKit::WebPage::didCommitLoad):

Canonical link: https://commits.webkit.org/311160@main